--- a/.editorconfig
+++ b/.editorconfig
@@ -1,16 +1,27 @@
-# Configurations to normalize the IDE behavior.
+# For more information about the properties used in
+# this file, please see the EditorConfig documentation:
 # http://editorconfig.org/
 
 root = true
 
 [*]
-indent_style = tab
-tab_width = 4
 charset = utf-8
 end_of_line = lf
-trim_trailing_whitespace = true
-insert_final_newline = true
-
-[package.json]
+indent_size = 2
 indent_style = space
-tab_width = 2
+insert_final_newline = true
+trim_trailing_whitespace = true
+max_line_length = 80
+
+[*.{js,jsx,es6,scss,ejs,json}]
+indent_size = 2
+indent_style = space
+
+[*.{png,jpg,svg,ico,mp3,eot,ttf,woff}]
+charset = unset
+end_of_line = unset
+indent_size = unset
+indent_style = unset
+insert_final_newline = unset
+trim_trailing_whitespace = unset
+max_line_length = unset
